tests/parser/parser-impl-error.swg
impl enum A.B. { } // swc-expected-error {{ParserExpectedTokenFam}}
